# auth-system

./: .env  Cargo.toml  README.md
prisma/: schema.prisma
src/: main.rs  prisma.rs
src/requests/: authorize.rs  login.rs  logout.rs  mod.rs  register.rs  whoami.rs
src/requests/misc/: data_types.rs  mod.rs
