[package]
name = "auth_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.6.1"}
axum-server = { version = "0.3", features = ["tls-rustls"] }
axum-extra = { version = "0.4.2", features = ["cookie", "cookie-private"] }
tower-http = { version = "0.3.5", features = ["cors"]}
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3" }
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
uuid = {version = "1.2.2", features = ["v4"]}
time = "0.3.17"